[package]
name = "tfhe-weave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { git = "https://github.com/zama-ai/tfhe-rs", features = [ "boolean", "shortint", "integer","aarch64-unix" ] }
secp256k1 = {version = "0.26.0", features = ["rand-std", "bitcoin-hashes"]}
byteorder = "1.4.3"