[package]
name = "tfhe-weave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.2.3", features = [ "boolean", "shortint", "integer","aarch64-unix" ] }
secp256k1 = {version = "0.27.0", features = ["rand-std", "bitcoin-hashes", "global-context"]}
byteorder = "1.4.3"